# trajectory_utils

./: .gitignore  README.md  environment-torch.yml  pyproject.toml  requirements-ros2-ml-cpu.txt  requirements-ros2-ml-cu124.txt
scripts/: assess_trajectories.py  cartpole_force.pkl  cartpole_velocity.pkl  cartpole_velocity_cas.pkl  generate_trajectories.py  predict.py  rerun_cartpole_velocity.py  run_cartpole_force.py  run_cartpole_velocity.py  run_cartpole_velocity_cas.py  run_cartpole_velocity_cas_restart.py  run_diff_drive.py  run_diff_drive_cas.py  train.py  trajectory_loader.py  unpickle.py
src/torch_traj_utils/: cartpole.py  cartpole_energy.py  cartpole_expert.py  cartpole_force_ode.py  cartpole_solver_force.py  cartpole_solver_velocity.py  cartpole_solver_velocity_cas.py  cartpole_velocity_cas_ode.py  cartpole_velocity_ode.py  cas_solver.py  casadi_ode.py  diff_drive_cas_ode.py  diff_drive_ode.py  diff_drive_solver.py  diff_drive_solver_cas.py  (+9 more)
test/: test_utils.py
tests/: test_metrics.py  test_sdf.py
torch/: README.md  assess_trajectories.py  cartpole.py  cartpole_energy.py  cartpole_expert.py  cartpole_force.pkl  cartpole_solver_force.py  cartpole_solver_velocity.py  cartpole_vctrl.npz  cartpole_velocity.pkl  diff_drive_solver.py  generate_trajectories.py  plot_trajectory.py  predict.py  rerun_cartpole_velocity.py  run_cartpole_force.py  run_cartpole_velocity.py  run_diff_drive.py  scp_solver.py  train.py  trajectories_big_1_validation.npz  trajectories_test11.npz  trajectory_loader.py  trajectory_metrics.py  unpickle.py
writeup/: math_background.tex
(+4 files in other folders)
